--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 dynamic = ["version"]
 
 [project.scripts]
-pai = "pai:main"
+pai = "pai:main.main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
