--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools >= 60", "setuptools_scm[toml] >= 8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pai"
+name = "plaitime"
 requires-python = ">=3.9"
 dependencies = ["pyside6", "ollama", "mistune"]
 authors = [{ name = "Hans Dembinski", email = "hans.dembinski@gmail.com" }]
 readme = "README.md"
-description = "Simple AI Chat"
+description = "Chat with local AI assistants or roleplay using ollama"
 license = { text = "MIT" }
 classifiers = [
     # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
@@ -18,7 +18,7 @@ classifiers = [
 dynamic = ["version"]
 
 [project.scripts]
-pai = "pai:main.main"
+plaitime = "plaitime:main.main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
