--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dynamic = ["version"]
 [project.scripts]
 plaitime = "plaitime:main.main"
 
+[project.optional-dependencies]
+test = ["pytest"]
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
